@@ -1,3 +1,4 @@
+	* improve DHT routing table to not create an unbalanced tree
 	* fix bug in uTP that would cause any connection taking more than one second
 	  to connect be timed out (introduced in the vulnerability path)
 	* fixed falling back to sending UDP packets direct when socks proxy fails
